# mechanix-apps

app_switcher/: Cargo.toml
apps/settings/: Cargo.toml  settings_1.0.0.bb
apps/settings/src/: main.rs
apps/settings/src/modules/: mod.rs
apps/settings/src/modules/battery/: handler.rs  service.rs
apps/settings/src/modules/device_info/: handler.rs
apps/settings/src/modules/device_oem_info/: handler.rs  service.rs
apps/settings/src/modules/display/: handler.rs  service.rs
apps/settings/src/modules/wireless_network/: handler.rs  mod.rs  service.rs
apps/settings/src/pages/: about_page.rs  battery_page.rs  date_time_page.rs  display_page.rs  dns_page.rs  ethernet_page.rs  ip_settings_page.rs  lock_timeout_page.rs  manage_bluetooth_page.rs  manage_networks_page.rs  network_details_page.rs  networks_page.rs  performance_mode_page.rs  protocol_details_page.rs  protocol_modes_page.rs  screen_timeout_page.rs  security_page.rs  settings_page.rs  sound_page.rs
background/: Cargo.toml
commons/command/: Cargo.toml
commons/services/: Cargo.toml
greeter/: Cargo.toml  mecha_greeter_0.1.0.bb
homescreen/: Cargo.toml
osk/: Cargo.toml
rotation/: Cargo.toml
status_bar/: Cargo.toml
