[package]
name = "settings"
version = "1.0.0"
authors = [
    "Sweta Rohit <swetar@mechasystems.com",
    "Akshay Raina <akshayr@mechasystems.com",
    "Shoaib Merchant <shoaibm@mechasystems.com>",
]
documentation = "https://docs.mecha.so"
description = "Collection of UI elements for a UI Shell for Mecha devices, supports wlroots based compositors"
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/mechanix-apps"
homepage = "https://mecha.so"

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
relm4 = "0.7.0-beta.1"
tokio = { version = "1.33", features = ["full"] }
relm4-components = "0.7.0-beta.1"
relm4-macros = "0.7.0-beta.1"
tonic = "0.9.2"
# gtk4-layer-shell = { version = "0.1.5", optional = true }
greetd_ipc = { version = "0.9.0", features = ["sync-codec"] }
custom_widgets = { path = "../commons/custom_widgets" }
custom_utils = { path = "../commons/custom_utils" }
mecha_battery_ctl = "0.1.0"
mecha_device_info_ctl = "0.1.0"
mecha_metrics_ctl = "0.1.0"
mecha_display_ctl = "0.1.0"
mecha_network_ctl = "0.1.1"
mecha_device_oem_info = "0.1.1"
wifi-ctrl = "0.2.3"


[build-dependencies]
tonic-build = "0.9.2"

# [features]
# default = ["layer-shell"]
# layer-shell = ["gtk4-layer-shell"]
